# myansible

./: ansible.cfg  createApp.ps1  reset.ps1  rotation_backup.ps1  site.yml  sitexml  web.config
ansible-app/: site.yml
ansible-app/group_vars/: all.yml
ansible-app/roles/fastapi/files/zenbun/: pyproject.toml
ansible-app/roles/fastapi/files/zenbun/app/views/: search_page.py
ansible-dev/: site.yml
ansible-dev/group_vars/: all.yml
apps/: view_thumbnail.txt  新規 テキスト ドキュメント.txt
apps/emb-worker/: requirements.txt
apps/ocr/: db.py  main.py  ocr.py
apps/ocr-main/: pyproject.toml
apps/ocr-main/routers/: task.py
apps/ocr-main/templates/: search.html
apps/ocr-main/views/: search_page.py
apps/ocr-worker/: main.py  pyproject.toml  新規 テキスト ドキュメント.txt
apps/ocr/routers/: search.py  upload.py
apps/ocr/templates/: upload.html
apps/ocr/views/: search_page.py
group_vars/: all.yml
myansible/: README.md  ansible.cfg  site.yml
projects/embedding-worker/: emb-worker.py
projects/ocr/: create_table.sql  requirements.txt
projects/ocr-main/: main.py  requirements.txt
projects/ocr-main/routers/: upload.py
projects/ocr-main/views/: upload_page.py
projects/ocr-worker/: docxtoimage.txt  ocr-worker.py  requirements.txt
projects/ocr/app/: main.py
roles/_fastapi/tasks/: fastapi_config.yml  main.yml
roles/_fastapi/templates/: uvicorn.service.j2
roles/common/meta/: main.yml
roles/common/tasks/: main.yml
roles/composer/meta/: main.yml
roles/composer/tasks/: main.yml
roles/etl/tasks/: install.yml  main.yml  start.yml  stop.yml  update.yml
(+127 files in other folders)
