[project]
name = "zenbun"
version = "0.1.0"
description = "pdf ocr"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "opencv-python-headless>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.1",
    "pdf2image>=1.17.0",
    "psycopg[binary]>=3.3.3",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.43.0",
]
